--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -148,111 +148,87 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.3.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </div>
                             <div class="textbox">
-                                <h4>Threads</h4>
-                                <h5>Illustration</h5>
+                                <h2>Threads</h2>
+                                <h4>Illustration</h4>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.4.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="textbox">
-                            <h4>Explore</h4>
-                            <h5>Graphic Design</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
-                            <div class="imgbox">
-                                <img src="Assets New/Assets.5.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="textbox">
-                            <h4>Finish</h4>
-                            <h5>Identity</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
-                            <div class="imgbox">
-                                <img src="Assets New/Assets.6.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="textbox">
-                            <h4>Lines</h4>
-                            <h5>Branding</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
-                            <div class="imgbox">
-                                <img src="Assets New/Assets.7.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="textbox ">
-                            <h4>Southwest</h4>
-                            <h5>Website Design</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="box d-flex justify-content-center">
-                            <div class="imgbox">
-                                <img src="Assets New/Assets.8.jpg" alt="">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </div>
                             <div class="textbox">
-                                <h4>Window</h4>
-                                <h5>Window</h5>
+                                <h2>Explore</h2>
+                                <h4>Graphic Design</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="Assets New/Assets.5.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Finish</h2>
+                                <h4>Identity</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="Assets New/Assets.6.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Lines</h2>
+                                <h4>Branding</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="Assets New/Assets.7.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Southwest</h2>
+                                <h4>Website Design</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="Assets New/Assets.8.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Window</h2>
+                                <h4>Photography</h4>
                             </div>
                         </div>
                     </div>
