--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -305,7 +305,9 @@
                     <div class="col-md-12 d-flex yellow">
                         <div class="story d-flex">
                             <div class="minibox d-flex align-items-center">
-                                <h2>Be Part Of Our Story!</h2>
+                                <h2>Be Part
+                                    Of Our
+                                    Story!</h2>
                             </div>
                         </div>
                     </div>
