--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-md-4 col-md-12 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.13.jpg" alt="">
@@ -352,7 +352,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-md-4 col-md-12  d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.14.jpg" alt="">
@@ -380,7 +380,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-md-4 col-md-12  d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.15.jpg" alt="">
@@ -410,7 +410,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center">
+                    <div class="col-md-4 col-md-12  d-flex justify-content-center">
                         <div class="textbox text-center">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam
                                 veritatis,
