--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -87,11 +87,8 @@
                         </div>
                         <div class="textbox text-center">
                             <h2>E-Commerce</h2>
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum iusto aliquid id
-                                repellendus
-                                odit? Odio voluptate dolores at! Quam voluptatem minus, ab quo enim quisquam. Placeat
-                                quam
-                                atque adipisci laudantium.</h4>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -108,11 +105,8 @@
                         </div>
                         <div class="textbox text-center">
                             <h2>Responsive Design</h2>
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nisi ad eveniet
-                                perferendis
-                                vitae temporibus hic, harum incidunt consectetur, maiores voluptatum adipisci! Odio
-                                numquam
-                                praesentium a omnis eaque, facilis vel.</h4>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -129,9 +123,8 @@
                         </div>
                         <div class="textbox text-center">
                             <h2>Web Security</h2>
-                            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, incidunt quaerat? Ex
-                                reprehenderit neque dicta error quas ratione quia labore voluptate quod, corporis, natus
-                                repudiandae voluptatibus unde, consectetur iure. Repudiandae!</h4>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                 </div>
