--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-md-12 d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.13.jpg" alt="">
@@ -345,7 +345,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-12  d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.14.jpg" alt="">
@@ -373,7 +373,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-12  d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.15.jpg" alt="">
